# AdvCpp

./: .gitignore  README.md
hw_1/: CMakeLists.txt
hw_1/include/: process.h
hw_1/lib/: CMakeLists.txt
hw_1/src/: main.cpp  process.cpp
hw_2/: CMakeLists.txt
hw_2/include/: base_logger.h  common.h  file_logger.h  global_log_func.h  log_color_formatter.h  log_formatter.h  logger.h  stderr_logger.h  stdout_logger.h  thread_safety.h
hw_2/lib/: CMakeLists.txt
hw_2/src/: base_logger.cpp  file_logger.cpp  global_log_func.cpp  log_color_formatter.cpp  log_formatter.cpp  logger.cpp  main.cpp  stderr_logger.cpp  stdout_logger.cpp
hw_3/: CMakeLists.txt
hw_3/example/: client.cpp  server.cpp
hw_3/include/: connection_tcp.h  ip_address.h  non_copyable.h  server_tcp.h  socket.h  socket_manager.h
hw_3/lib/: CMakeLists.txt
hw_3/src/: client.cpp  connection_tcp.cpp  ip_address.cpp  main.cpp  server.cpp  server_tcp.cpp  socket.cpp
hw_4/: CMakeLists.txt
hw_4/example/: main.cpp  test.cpp
hw_4/include/: base_service.h  client_tcp.h  connection_tcp.h  ip_address.h  rw_socket.h  service.h  socket_manager.h
hw_4/lib/: CMakeLists.txt
hw_4/src/: base_service.cpp  client_tcp.cpp  connection_tcp.cpp  rw_socket.cpp  server_tcp.cpp  service.cpp  socket_manager.cpp
hw_4/test/: connect.sh
hw_5/: CMakeLists.txt
hw_5/example/: main.cpp
hw_5/include/: Allocator.h  Semaphore.h  allocator.h  non_copyable.h  semaph.h  shared_map.h  shared_memory.h  shmem.h
hw_5/lib/: CMakeLists.txt
hw_5/src/: Semaphore.cpp  semaph.cpp  shared_memory.cpp  shmem.cpp
hw_6/: CMakeLists.txt
hw_6/config/: config.ini
hw_6/example/: coro_test.cpp  main.cpp  resource.cpp  test_http_packet.cpp  threads.cpp
hw_6/example/include/: myhttp.h
hw_6/example/src/: main.cpp
hw_6/files/: index.html  link1.html  link2.html
hw_6/include/: base_service.h  client_tcp.h  http_server.h  non_copyable.h  server_tcp.h  socket.h  thread.h
hw_6/include/config/: configurator.h
hw_6/include/coro/: coro.h
hw_6/include/exceptions/: client_tcp_ecxep.h  http_packet_excep.h
hw_6/include/http/: http_common.h  http_packet.h  http_parser.h  http_server.h
hw_6/include/log/: base_logger.h  common.h  file_logger.h  global_log_func.h  log_color_formatter.h  log_formatter.h  logger.h  stderr_logger.h
hw_6/include/resource/: resource_manager.h
hw_6/include/tcp/: client_tcp.h  rw_socket.h
hw_6/lib/: CMakeLists.txt
hw_6/src/: base_service.cpp  client_tcp.cpp  connection_tcp.cpp  http_server.cpp  rw_socket.cpp  server_tcp.cpp  service.cpp
hw_6/src/coro/: coro.cpp
hw_6/src/http/: http_packet.cpp  http_server.cpp
hw_6/src/log/: base_logger.cpp  file_logger.cpp  global_log_func.cpp  log_color_formatter.cpp  logger.cpp  stderr_logger.cpp
hw_6/src/resource/: resource_manager.cpp
hw_6/src/tcp/: base_service.cpp  client_tcp.cpp  ip_address.cpp  rw_socket.cpp  socket_manager.cpp
hw_6/test/: connect.sh
hw_7/: CMakeLists.txt  err
hw_7/config/: config.ini
hw_7/example/: resource.cpp  test.cpp
hw_7/example/include/: myhttp.h
hw_7/example/src/: main.cpp
hw_7/files/: index.html  link3.html
hw_7/include/: thread.h
hw_7/include/config/: configurator.h
hw_7/include/http/: http_common.h  http_server.h
hw_7/include/log/: stdout_logger.h
hw_7/include/resource/: resource_manager.h
hw_7/include/system/: file.h  file_cont.h  generator.h
hw_7/include/tcp/: base_service.h  rw_socket.h
hw_7/lib/: CMakeLists.txt
hw_7/src/log/: global_log_func.cpp  log_formatter.cpp  stdout_logger.cpp
hw_7/src/tcp/: connection_tcp.cpp  socket.cpp
